fix mq for player page on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,9 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
+	.players-header-container {
+		width: 100%;
+	}
 	.players-container {
 		grid-template-columns: repeat(3, 1fr);
 		/* grid-template-rows: repeat(4, 1fr); */
